--- a/login/style_login.css
+++ b/login/style_login.css
@@ -93,6 +93,44 @@ body{
     transition: all 0.6s ease-in-out;
 }
 
+/* Styling untuk select option */
+.container select {
+    background-color: #eee;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    color: #333;
+    font-size: 13px;
+    padding: 10px 15px;
+    width: 100%;
+    outline: none;
+    margin: 8px 0;
+    appearance: none; /* Untuk menghilangkan panah default */
+    background-image: url('https://cdn-icons-png.flaticon.com/512/25/25623.png'); /* Ikon panah */
+    background-repeat: no-repeat;
+    background-position: right 10px center;
+    background-size: 15px;
+}
+
+/* Styling untuk opsi di dalam select */
+.container select option {
+    color: #333;
+    background-color: #fff;
+    font-size: 13px;
+    padding: 10px;
+}
+
+/* Hover effect untuk select option */
+.container select:hover {
+    border-color: #ff5252;
+}
+
+/* Fokus pada select */
+.container select:focus {
+    border-color: #ff5252;
+    background-color: #f9f9f9;
+}
+
+
 .sign-in{
     left: 0;
     width: 50%;
